# otel-langfuse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  graph.py  main.py  pyproject.toml  requirements.txt  run_server.py  run_training.py
.github/workflows/: build-push.yml
app/: __init__.py  graph.py  main.py  prompts.yaml
docs/: opentelemetry-semantic-conventions.md
k8s/: azure-grafana-agentlightning.json  azure-grafana-langgraph.json  deployment.yaml  langfuse-values.yaml.example  otel-collector-values.yaml
static/: style.css
templates/: index.html
training/: __init__.py  agent.py  dataset.py  evaluator.py  train.py
